# VariableFrustum

./: .gitignore  CMakeLists.txt  cameraUtils.py
src/: FrustumTracker.cpp  FrustumTracker.h  PLYReader.cpp  PLYReader.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp
src/glad/: glad.c  glad.h
src/shaders/: basic.frag  basic.vert
